force-app/main/default/objects/Solarisbank__c/Solarisbank__c.object-meta.xml
<CustomObject>
    <label>Solarisbank</label>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solarisbank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>