force-app/main/default/objects/Solarisbank__c/fields/Solarisbank_Id__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Solarisbank Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>